--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -10,16 +10,21 @@
     {
       "src": "logo192.png",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "192x192",
+      "purpose": "any maskable"
     },
     {
       "src": "logo512.png",
       "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "512x512",
+      "purpose": "any maskable"
     }
   ],
-  "start_url": ".",
+  "start_url": "./index.html",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "orientation": "portrait",
+  "theme_color": "#4a6fa5",
+  "background_color": "#ffffff",
+  "description": "Generate, print, and download restaurant bills",
+  "categories": ["productivity", "business", "finance"]
 }
